--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -17,8 +17,17 @@
       }
 
       .search-result {
-        position: static !important;
+        position: relative !important;
+        top: 0 !important;
+        left: 0 !important;
         float: left !important;
+        margin-left: 15px !important;
+        margin-top: 15px !important;
+        display: inline-block !important;
+      }
+
+      h1 {
+        text-transform: capitalize;
       }
 
       .js-button {
